refactor(projects): refactorizar uso de método